fix encryption icon missalignment

--- a/res/css/views/rooms/_IRCLayout.scss
+++ b/res/css/views/rooms/_IRCLayout.scss
@@ -41,7 +41,7 @@ $irc-line-height: $font-18px;
         }
 
         > .mx_EventTile_msgOption {
-            order: 4;
+            order: 5;
             flex-shrink: 0;
         }
 
@@ -90,12 +90,14 @@ $irc-line-height: $font-18px;
             text-align: right;
         }
 
-        .mx_EventTile_e2eIcon {
+        > .mx_EventTile_e2eIcon {
             position: relative;
             right: unset;
             left: unset;
-            top: -2px;
             padding: 0;
+            order: 3;
+            flex-shrink: 0;
+            flex-grow: 0;
         }
 
         .mx_EventTile_line {
@@ -113,7 +115,7 @@ $irc-line-height: $font-18px;
         }
 
         .mx_EventTile_reply {
-            order: 3;
+            order: 4;
         }
 
         .mx_EditMessageComposer_buttons {
